// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableExpandableRow rendering renders expected elements 1`] = `
<tr
  className="Table__expandableRow"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <td
    colSpan={2}
  >
    <div
      className="Table__childContainer"
    >
      Test child
    </div>
  </td>
</tr>
`;

exports[`TableExpandableRow rendering renders expected elements when optional properties are set 1`] = `
<tr
  className="Table__expandableRow TestClass"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <td
    colSpan={2}
  >
    <div
      className="Table__childContainer"
    >
      Test child
    </div>
  </td>
</tr>
`;
